fix: [ASL-4781] Pdf protocol spacing issue (#296)

--- a/packages/asl-pages/pages/common/assets/sass/pdf/index.scss
+++ b/packages/asl-pages/pages/common/assets/sass/pdf/index.scss
@@ -84,7 +84,6 @@ section > h2 {
 }
 
 .protocol-content .expanding-panel header {
-
   .govuk-button.link {
     background: none;
     padding: 0;
@@ -94,12 +93,16 @@ section > h2 {
     width: 100%;
     text-align: left;
   }
-  
+
+  .govuk-button.link:has(h3) {
+    margin-top: 40px;
+    display: inherit;
+  }
+
   h3 {
     font-size: 24px;
     border-bottom: 1px solid $dark-grey;
     padding-bottom: $govuk-gutter / 2;
-    margin-top: 40px;
     margin-bottom: 0;
   }
 }
